--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,20 +1,41 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id="WebApp_ID" version="3.1">
-  <display-name>Testowa Apka</display-name>
-  <welcome-file-list>
-    <welcome-file>index.html</welcome-file>
-    <welcome-file>index.htm</welcome-file>
-    <welcome-file>index.jsp</welcome-file>
-    <welcome-file>default.html</welcome-file>
-    <welcome-file>default.htm</welcome-file>
-    <welcome-file>default.jsp</welcome-file>
-  </welcome-file-list>
-  <servlet>
-    <servlet-name>Hello</servlet-name>
-    <servlet-class>pawc.web.Hello</servlet-class>
-    <init-param>
-    	<param-name>entry</param-name>
-    	<param-value>false</param-value>
-    </init-param>
-  </servlet>
+    <display-name>Testowa Apka</display-name>
+    <welcome-file-list>
+        <welcome-file>index.html</welcome-file>
+        <welcome-file>index.htm</welcome-file>
+        <welcome-file>index.jsp</welcome-file>
+        <welcome-file>default.html</welcome-file>
+        <welcome-file>default.htm</welcome-file>
+        <welcome-file>default.jsp</welcome-file>
+    </welcome-file-list>
+
+<filter>
+    <filter-name>SessionCheckFilter</filter-name>
+    <filter-class>pawc.webapp.SessionCheck</filter-class>
+</filter>
+<filter-mapping>
+    <filter-name>SessionCheckFilter</filter-name>
+    <url-pattern>/SuccessPage</url-pattern>
+    <url-pattern>/UserExists</url-pattern>
+</filter-mapping>
+
+<servlet> 
+    <servlet-name>SuccessPage</servlet-name>
+    <jsp-file>/WEB-INF/SuccessPage.jsp</jsp-file>
+</servlet>
+<servlet-mapping>
+    <servlet-name>SuccessPage</servlet-name>
+    <url-pattern>/SuccessPage</url-pattern>
+</servlet-mapping>
+
+<servlet>                                                          
+    <servlet-name>UserExists</servlet-name>                           
+    <jsp-file>/WEB-INF/UserExists.jsp</jsp-file>                              
+</servlet>                                                         
+<servlet-mapping>                                                  
+    <servlet-name>UserExists</servlet-name>                           
+    <url-pattern>/UserExists</url-pattern>                            
+</servlet-mapping>   
+
 </web-app>
