dodawanie wpisów po zalogowaniu

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -64,4 +64,9 @@
     <servlet-class>pl.pawc.Wall</servlet-class>
 </servlet>
 
+<servlet>
+    <servlet-name>InsertEntry</servlet-name>
+    <servlet-class>pl.pawc.InsertEntry</servlet-class>
+</servlet>
+
 </web-app>
